--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 # Godot 4+ specific ignores
 .godot/
-addons/
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+
+# Ignore Addons
+.addons
+
+# Imported translations (automatically generated from CSV files)
+*.translation
+
+# Mono-specific ignores
+.mono/
+data_*/
+mono_crash.*.json
